exports[`BpkChartAxis X should render band scale 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    transform="translate(16.666666666666668, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      North America
    </text>
  </g>
  <g
    transform="translate(50, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      South America
    </text>
  </g>
  <g
    transform="translate(83.33333333333334, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Europe
    </text>
  </g>
  <g
    transform="translate(116.66666666666667, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Asia
    </text>
  </g>
  <g
    transform="translate(150, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Australia
    </text>
  </g>
  <g
    transform="translate(183.33333333333334, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    transform="translate(50, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      South America
    </text>
  </g>
  <g
    transform="translate(116.66666666666667, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Asia
    </text>
  </g>
  <g
    transform="translate(183.33333333333334, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render band scale with "tickEvery" attribute 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    transform="translate(16.666666666666668, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      North America
    </text>
  </g>
  <g
    transform="translate(83.33333333333334, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Europe
    </text>
  </g>
  <g
    transform="translate(150, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      Australia
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render linear scale 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    transform="translate(18.947368421052634, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      50
    </text>
  </g>
  <g
    transform="translate(40, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      100
    </text>
  </g>
  <g
    transform="translate(61.05263157894737, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      150
    </text>
  </g>
  <g
    transform="translate(82.10526315789474, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      200
    </text>
  </g>
  <g
    transform="translate(103.15789473684211, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      250
    </text>
  </g>
  <g
    transform="translate(124.21052631578948, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      300
    </text>
  </g>
  <g
    transform="translate(145.26315789473685, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      350
    </text>
  </g>
  <g
    transform="translate(166.31578947368422, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      400
    </text>
  </g>
  <g
    transform="translate(187.3684210526316, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      450
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render linear scale with "numTicks" attribute 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    transform="translate(82.10526315789474, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      200
    </text>
  </g>
  <g
    transform="translate(166.31578947368422, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      400
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render with label 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    transform="translate(18.947368421052634, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      50
    </text>
  </g>
  <g
    transform="translate(40, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      100
    </text>
  </g>
  <g
    transform="translate(61.05263157894737, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      150
    </text>
  </g>
  <g
    transform="translate(82.10526315789474, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      200
    </text>
  </g>
  <g
    transform="translate(103.15789473684211, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      250
    </text>
  </g>
  <g
    transform="translate(124.21052631578948, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      300
    </text>
  </g>
  <g
    transform="translate(145.26315789473685, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      350
    </text>
  </g>
  <g
    transform="translate(166.31578947368422, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      400
    </text>
  </g>
  <g
    transform="translate(187.3684210526316, 0)">
    <text
      className="bpk-chart__axis-tick-text"
      x={0}
      y={18}>
      450
    </text>
  </g>
  <text
    className="bpk-chart__axis-label"
    textAnchor="middle"
    x={60}
    y={34}>
    X axis label
  </text>
</g>
`;

exports[`BpkChartAxis Y should render band scale 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    transform="translate(0, 16.666666666666668)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      North America
    </text>
  </g>
  <g
    transform="translate(0, 50)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      South America
    </text>
  </g>
  <g
    transform="translate(0, 83.33333333333334)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Europe
    </text>
  </g>
  <g
    transform="translate(0, 116.66666666666667)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Asia
    </text>
  </g>
  <g
    transform="translate(0, 150)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Australia
    </text>
  </g>
  <g
    transform="translate(0, 183.33333333333334)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    transform="translate(0, 50)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      South America
    </text>
  </g>
  <g
    transform="translate(0, 116.66666666666667)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Asia
    </text>
  </g>
  <g
    transform="translate(0, 183.33333333333334)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render band scale with "tickEvery" attribute 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    transform="translate(0, 16.666666666666668)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      North America
    </text>
  </g>
  <g
    transform="translate(0, 83.33333333333334)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Europe
    </text>
  </g>
  <g
    transform="translate(0, 150)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      Australia
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render linear scale 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    transform="translate(0, 18.947368421052634)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      50
    </text>
  </g>
  <g
    transform="translate(0, 40)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      100
    </text>
  </g>
  <g
    transform="translate(0, 61.05263157894737)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      150
    </text>
  </g>
  <g
    transform="translate(0, 82.10526315789474)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      200
    </text>
  </g>
  <g
    transform="translate(0, 103.15789473684211)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      250
    </text>
  </g>
  <g
    transform="translate(0, 124.21052631578948)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      300
    </text>
  </g>
  <g
    transform="translate(0, 145.26315789473685)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      350
    </text>
  </g>
  <g
    transform="translate(0, 166.31578947368422)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      400
    </text>
  </g>
  <g
    transform="translate(0, 187.3684210526316)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      450
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render linear scale with "numTicks" attribute 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    transform="translate(0, 82.10526315789474)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      200
    </text>
  </g>
  <g
    transform="translate(0, 166.31578947368422)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      400
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render with label 1`] = `
<g
  className="bpk-chart__axis"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    transform="translate(0, 18.947368421052634)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      50
    </text>
  </g>
  <g
    transform="translate(0, 40)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      100
    </text>
  </g>
  <g
    transform="translate(0, 61.05263157894737)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      150
    </text>
  </g>
  <g
    transform="translate(0, 82.10526315789474)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      200
    </text>
  </g>
  <g
    transform="translate(0, 103.15789473684211)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      250
    </text>
  </g>
  <g
    transform="translate(0, 124.21052631578948)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      300
    </text>
  </g>
  <g
    transform="translate(0, 145.26315789473685)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      350
    </text>
  </g>
  <g
    transform="translate(0, 166.31578947368422)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      400
    </text>
  </g>
  <g
    transform="translate(0, 187.3684210526316)">
    <text
      className="bpk-chart__axis-tick-text"
      dy="0.32em"
      x={-6}
      y={0}>
      450
    </text>
  </g>
  <text
    className="bpk-chart__axis-label"
    textAnchor="middle"
    transform="translate(-22, 60) rotate(-90)">
    Y axis label
  </text>
</g>
`;
